# analysis_module-

./: .env.example  .gitignore  README.md  console.bat  docker-compose.yml  pyproject.toml  start_hf_api.bat
interviewcoach_dataset_full_ru/: README.md  annotation_guidelines.md  coverage_matrix.csv
interviewcoach_dataset_full_ru/export/: sft_eval.jsonl  sft_test.jsonl  sft_train.jsonl
interviewcoach_dataset_full_ru/manifests/: dedup_groups.csv  sources.csv  split_manifest.csv
interviewcoach_dataset_full_ru/raw/: raw_eval.jsonl  raw_test.jsonl  raw_train.jsonl
interviewcoach_dataset_full_ru/reports/: validation_report.json
interviewcoach_dataset_v1/: README.md  annotation_guidelines.md  coverage_matrix.csv  split_notes.md
interviewcoach_dataset_v1/export/: sft_eval.jsonl  sft_test.jsonl  sft_train.jsonl
interviewcoach_dataset_v1/manifests/: sources.csv  split_manifest.csv
interviewcoach_dataset_v1/raw/: raw_eval.jsonl  raw_test.jsonl  raw_train.jsonl
interviewcoach_dataset_v1/reports/: validation_report.json
src/interview_analysis/: cli.py  exceptions.py
src/interview_analysis/api/: app.py  (+1 more)
tests/: test_demo_routes.py  test_hf_provider.py  test_ollama_provider.py  test_pipeline.py  test_topic_catalog.py  test_training_assets.py
training/: README.md
training/configs/: lora_config.example.json  qlora_rtx3060_6gb.json  qlora_rtx3060_6gb_local_1_5b.json  qlora_rtx3060_6gb_local_1_5b_smoke.json  qlora_rtx3060_6gb_smoke.json
training/scripts/: evaluate_predictions.py  export_sft_dataset.py  finetune_lora.py  sync_full_dataset.py  validate_dataset.py
(+161 files in other folders)
