[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-analysis-module"
version = "0.2.0"
description = "Educational LLM-based interview answer analysis module"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.scripts]
interview-analysis-console = "interview_analysis.cli:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
]
training = [
  "accelerate>=1.13,<2.0",
  "datasets>=2.21,<4.0",
  "peft>=0.13,<1.0",
  "transformers>=4.46,<5.0",
  "trl>=0.10,<1.0",
]
qlora = [
  "bitsandbytes>=0.43,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
interview_analysis = [
  "data/*.json",
  "db/*.sql",
  "demo/*.html",
  "demo/*.json",
  "prompts/*.txt",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

